ignore builds and bsc

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,8 @@ bld/
 *.VisualState.xml
 TestResult.xml
 
+[Bb]uilds/
+
 # Build Results of an ATL Project
 [Dd]ebugPS/
 [Rr]eleasePS/
@@ -38,7 +40,7 @@ dlldata.c
 # DNX
 project.lock.json
 artifacts/
-
+*.bsc
 *_i.c
 *_p.c
 *_i.h
